@@ -864,7 +864,8 @@ class plxUtils {
 	 **/
 	public static function cdataCheck($str) {
 		$str = str_ireplace('!CDATA', '&#33;CDATA', $str);
-		return str_replace(']]>', ']]&gt;', $str);
+        $str = str_replace(']]>', ']]&gt;', $str);
+		return self::sanitizePhpTags($str);
 	}
 
 	/**
@@ -1494,4 +1495,13 @@ EOT;
 		}
 	}
 
+    /**
+     * Remove Php opening and closing tags
+     * @param String $content
+     * @return array|string|string[]
+     * @author Pedro "P3ter" CADETE, Moritz Huppert
+     */
+    public static function sanitizePhpTags(String $content) {
+        return str_ireplace(array("<?php","<?", "?>"), "", $content);;
+    }
 }
